--- a/01 - JavaScript Drum Kit/index.html
+++ b/01 - JavaScript Drum Kit/index.html
@@ -56,7 +56,28 @@
         <audio data-key="75" src="sounds/tom.wav"></audio>
         <audio data-key="76" src="sounds/tink.wav"></audio>
 
-        <!--<script> window.addEventListener('keydown', function (e) { console.log(e); }); </script>-->
+        <script>
+            window.addEventListener('keydown', function (e) {
+                const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+                const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+                if (!audio) 
+                    return; //no matching audio elem found, stop function.
+                audio.currentTime = 0;
+                audio.play();
+                key.classList.add('playing');
+                //console.log(key.classList);
+            });
+
+            function removeTransition(e) {
+                if (e.propertyName !== 'transform') 
+                    return; //skip if no transform
+                console.log(e.propertyName);
+            }
+
+            const keys = document.querySelectorAll('.key');
+            keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+            console.log(keys);
+        </script>
 
     </body>
 </html>
