--- a/03 - CSS Variables/index.html
+++ b/03 - CSS Variables/index.html
@@ -22,10 +22,20 @@
         <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
         <style>
-
-            /*
-      misc styles, nothing to do with CSS variables
-    */
+            :root {
+                --base: #ffc600;
+                --spacing: 10px;
+                --blur: 10px;
+            }
+            img {
+                padding: var(--spacing);
+                background: var(--base);
+                filter: blur(var(--blur));
+            }
+            .h1 {
+                color: var(--base);
+            }
+            /*Predefined styles*/
             body {
                 text-align: center;
                 background: #193549;
@@ -42,7 +52,16 @@
             }
         </style>
 
-        <script></script>
+        <script>
+            const inputs = document.querySelectorAll('.controls input');
+            function update() {
+                console.log(this.value);
+                console.log(this.id)
+            }
+
+            inputs.forEach(input => input.addEventListener('change', update));
+            inputs.forEach(input => input.addEventListener('mousemove', update));
+        </script>
 
     </body>
 </html>
