--- a/03 - CSS Variables/index.html
+++ b/03 - CSS Variables/index.html
@@ -16,14 +16,14 @@
             <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
             <label for="base">Base Color</label>
-            <input id="base" type="color" name="base" value="#ffc600">
+            <input id="base" type="color" name="base" value="#E91E63">
         </div>
 
-        <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+        <img src="https://picsum.photos/g/800/500/?random">
 
         <style>
             :root {
-                --base: #ffc600;
+                --base: #E91E63;
                 --spacing: 10px;
                 --blur: 10px;
             }
@@ -32,7 +32,7 @@
                 background: var(--base);
                 filter: blur(var(--blur));
             }
-            .h1 {
+            .hl {
                 color: var(--base);
             }
             /*Predefined styles*/
@@ -55,8 +55,8 @@
         <script>
             const inputs = document.querySelectorAll('.controls input');
             function update() {
-                console.log(this.value);
-                console.log(this.id)
+                const suffix = this.dataset.sizing || '';
+                document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
             }
 
             inputs.forEach(input => input.addEventListener('change', update));
