--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -135,10 +135,8 @@
             const ordered = inventors.sort((firstPerson, secondPerson) => {
                 if (firstPerson.year > secondPerson.year) {
                     return 1;
-                }
-                if (firstPerson.year < secondPerson.year) {
-                    return
-                    -1;
+                } else if (firstPerson.year < secondPerson.year) {
+                    return -1;
                 }
                 return 0; //years must be equal
             });
