--- a/index.html
+++ b/index.html
@@ -25,38 +25,67 @@
         <div class="jumbotron">
             <div class="container">
                 <h1 class="display-3">Javascript 30</h1>
-                <p>My completed solutions for the awesome <a href="https://javascript30.com/">Javascript30</a> course by <a href="https://github.com/wesbos">Wes Bos</a> without any frameworks, compiler or boilerplates, using ES6 syntax.</p>
-                <p>Demo site by <a>Francisco Santana</a>.</p>
-                <a class="btn btn-primary btn-lg" href="https://github.com/Fsantana31/js30" role="button">View on Github »</a>
+                <p>My completed solutions for the awesome <a href="https://javascript30.com/">Javascript30</a> course
+                    by <a href="https://github.com/wesbos">Wes Bos</a> without any frameworks, compiler or
+                    boilerplates, using ES6 syntax.</p>
+                <p>Demo site by <a>Francisco Santana</a>. New solutions coming soon.</p>
+                <a class="btn btn-primary btn-lg" href="https://github.com/Fsantana31/js30" role="button">View on
+                    Github »</a>
             </div>
         </div>
         <div class="container">
-                <!-- Example row of columns -->
-                <div class="row">
-                  <div class="col-md-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-                  </div>
-                  <div class="col-md-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-                  </div>
-                  <div class="col-md-4">
-                    <h2>Heading</h2>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-                  </div>
+            <!-- Example row of columns -->
+            <div class="row">
+                <div class="col-md-4">
+                    <a href="./01_JavaScript_Drum_Kit/index.html">
+                        <div class="card">
+                            <img class="card-img-top" src="img/drums.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Javascript Drum Kit</h5>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-        
-                <hr>
-        
-              </div>
+                <div class="col-md-4">
+                    <a href="./02 _JS _and_CSS_Clock/index.html">
+                        <div class="card">
+                            <img class="card-img-top" src="img/clock.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">JS & CSS Clock</h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                        <a href="./02 _JS _and_CSS_Clock/index.html">
+                            <div class="card">
+                                <img class="card-img-top" src="img/variables.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">CSS Variables</h5>
+                                </div>
+                            </div>
+                        </a>
+                </div>
+               <!-- <div class="col-md-4">
+                        <a href="./02 _JS _and_CSS_Clock/index.html">
+                            <div class="card">
+                                <img class="card-img-top" src="img/clock.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Array Cardio Day 1</h5>
+                                    <p>In progress...</p>
+                                </div>
+                            </div>
+                        </a>
+                </div>-->
+            </div>
+
+            <hr>
+
+        </div>
     </main>
     <footer class="container">
-            <p>© 2018</p>
-          </footer>
+        <p>© 2018</p>
+    </footer>
     <div class="container">
         <div class="row">
         </div>
